--- a/style.css
+++ b/style.css
@@ -8,3 +8,22 @@
 .long{
     width: 600px;
 }
+.image{
+    padding: 20px
+}
+.cb{
+    border-bottom: solid 1px blueviolet;  
+}
+.nm{
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.bg {
+    background-image: url("./pictures/BgHome.jpg");
+}
+
+.center {
+    padding: 130px; 
+}
